--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Prerequisites
 *.d
+*.clang-format
 
 # Compiled Object files
 *.slo
@@ -30,3 +31,8 @@
 *.exe
 *.out
 *.app
+
+# File structure
+build
+
+
